# AI

./: .env  .gitignore  Dockerfile  TEST.txt  agent.py  docker-compose.yml  main.py  postings.py  pyproject.toml  readme.md  requirements.txt  resumes.py  test.py  upstage.py
.github/workflows/: deploy.yml  docker-build.yml
db/: chroma.sqlite3  postings.py  resumes.py
exception/: base.py  discord.py  handlers.py
routers/: agent.py  agent_router.py  postings.py  resumes.py
services/: agent_service.py  crewai_core.py  crewai_service.py  crewai_with_verification.py  gpt_service.py  langgraph_service.py  model_service.py  ocr_service.py  test_langchain.py
services/langgraph/: gan_graph.py
